# r4r

./: .clang-format  .clang-tidy  .dockerfileignore  .editorconfig  .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Makefile  README.md  backEnd.cpp  backEnd.hpp  cFileOptHelpers.hpp  cli.hpp  common.hpp  default_image_files.hpp  dispatchMacro.cpp  dpkg_database.hpp  file_info.hpp  filesystem_trie.hpp  isComplete.hpp  logger.hpp  main.cpp  memberTypeHashCompare.hpp  middleEnd.cpp  middleEnd.hpp  platformSpecificSyscallHandling.hpp  process.hpp  processSpawnHelper.hpp  ptraceBasedTracer.cpp  ptraceBasedTracer.hpp  ptraceHelpers.hpp  ptraceMainLoop.cpp  ptraceMainLoop.hpp  rpkg_database.hpp  sonar-project.properties  stringHelpers.hpp  syscallMapping.hpp  syscall_monitor.hpp  (+3 more)
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: run-hooks
.githooks/pre-commit.d/: 10-clang-format
.githooks/pre-push.d/: 10-tests
.github/workflows/: cmake-single-platform.yml  main.yml  sonarcube.yml
backend/: aptResolver.cpp  aptResolver.hpp  backEnd.cpp  backEnd.hpp  dpkgResolver.cpp  dpkgResolver.hpp  filesystemGraph.hpp  optionals.hpp  rpkgResolver.cpp  rpkgResolver.hpp
csv/: serialisedFileInfo.cpp  serialisedFileInfo.hpp
frontend/: platformSpecificSyscallHandling.hpp  ptraceHelpers.hpp  ptraceMainLoop.cpp  ptraceMainLoop.hpp  readme.txt  syscallMapping.hpp
frontend/syscalls/: chroot.cpp  chroot.hpp  clone.cpp  clone.hpp  dup.cpp  dup.hpp  epoll.cpp  epoll.hpp  event.cpp  event.hpp  execve.cpp  execve.hpp  exit.hpp  fnctl.cpp  fnctl.hpp  futex.cpp  futex.hpp  genericSyscallHeader.hpp  ignored.hpp  mkdir.cpp  mkdir.hpp  open.cpp  open.hpp  pipe.cpp  pipe.hpp  read.cpp  read.hpp  rename.cpp  rename.hpp  socket.cpp  socket.hpp  stat.cpp  stat.hpp  syscallHandler.hpp  syscallHandlerMapper.cpp  syscallHandlerMapper.hpp  syscallHandlerMapperInline.cpp  syscallHandlerMapperInline.hpp  syscallHeaders.hpp  timer.cpp  (+3 more)
include/r4r/: r4r_lib.h
legacy/: isComplete.hpp  memberTypeHashCompare.hpp
legacy/backend/: aptResolver.cpp  backEnd.cpp  optionals.hpp  rpkgResolver.hpp
legacy/frontend/: ptraceMainLoop.cpp  ptraceMainLoop.hpp  readme.txt
legacy/frontend/syscalls/: chroot.hpp  clone.cpp  clone.hpp  dup.cpp  epoll.hpp  event.hpp  execve.hpp  fnctl.hpp  futex.cpp  genericSyscallHeader.hpp  ignored.hpp  open.cpp  read.cpp  rename.cpp  socket.cpp  stat.cpp  stat.hpp  syscallHandler.hpp  syscallHandlerMapper.cpp  syscallHandlerMapperInline.cpp  syscallHandlerMapperInline.hpp  syscallHeaders.hpp
legacy/middleend/: middleEnd.cpp
middleend/: middleEnd.cpp  middleEnd.hpp
src/: archive.h  argparser.h  cli.h  common.h  config.h.in  config_file.h  curl.h  default_image_files.h  dockerfile.h  dockerfile_builder.h  dpkg_database.h  file_tracer.h  filesystem_trie.h  fs.h  ignore_file_map.h  install_r_package_builder.h  json.h  logger.h  main.cpp  main_common.h  manifest.h  manifest_format.h  manifest_section.h  process.h  r4r_lib.cpp  resolvers.h  rpkg_database.h  syscall_monitor.h  tracer.h  user.h  util.h  util_fs.h  util_io.h
syscalls/: chroot.cpp  chroot.hpp  clone.cpp  clone.hpp  dup.cpp  dup.hpp  epoll.cpp  epoll.hpp  event.cpp  event.hpp  execve.cpp  execve.hpp  exit.hpp  fnctl.cpp  fnctl.hpp  futex.cpp  futex.hpp  genericSyscallHeader.hpp  ignored.hpp  mkdir.cpp  mkdir.hpp  open.cpp  open.hpp  pipe.cpp  pipe.hpp  read.cpp  read.hpp  socket.cpp  socket.hpp  stat.cpp  stat.hpp  syscallHandler.hpp  syscallHandlerMapper.cpp  syscallHandlerMapper.hpp  syscallHeaders.hpp  timer.cpp  timer.hpp  unlink.cpp  unlink.hpp
tests/: CMakeLists.txt  OneSymlinkedFile.sh  archive_test.cpp  argparser_test.cpp  cli_test.cpp  common.h  config_file_test.cpp  dockerfile_test.cpp  dpkg_database_test.cpp  file_tracer_test.cpp  filesystem_trie_test.cpp  filesystemtrie_test.cpp  fs_symlink_resolver_test.cpp  fs_test.cpp  ignore_file_map_test.cpp  install_r_package_builder_test.cpp  json_test.cpp  logger_test.cpp  manifest_copy_section_test.cpp  manifest_format_test.cpp  manifest_package_section_test.cpp  manifest_test.cpp  process_test.cpp  rpkg_database_test.cpp  syscall_monitor_test.cpp  user_test.h  util_fs_symlink_resolver_test.cpp  util_fs_tempfile_test.cpp  util_fs_test.cpp  util_io_test.cpp  util_test.cpp
tests-integration/: .gitignore  Dockerfile  Makefile  entrypoint.sh  test.mk  ubuntu:22.04.cache
tests-integration/BuildTool/: execute.sh
tests-integration/DetectExecutable/: a.R  execute.sh  toCheck.txt
tests-integration/Kaggle/: execute.sh  toCheck.txt
tests-integration/NoRemote/: execute.sh  toCheck.txt
tests-integration/SimpleHistogram/: execute.sh
tests-integration/Sudo/: execute.sh  toCheck.txt
tests-integration/SymlinkIdentity/: execute.sh
tests-integration/end-to-end-test/: Dockerfile  program.sh  script.sh
tests-integration/hello-world/: Makefile  script.sh
tests-integration/ping/: execute.sh  toCheck.txt
tests-integration/r-ggplot/: Makefile
tests-integration/r-ggplot/expected/: a.html
tests-integration/r-hello-world/: Makefile
tests-integration/r-kaggle/: Makefile
tests-integration/r-postgress/: Makefile  a.html
tests-integration/r-sqlite/: Makefile  a.Rmd
tests/BuildTool/: toCheck.txt
tests/DirContents/: toCheck.txt
tests/SU/: execute.sh  toCheck.txt
tests/SimpleHistogram/: sampleHist.Rmd
tests/SymlinkIdentity/: toCheck.txt
tools/: generate_ignored_file_list.sh
